--- a/self-serve-go-k8s-helm-tfstatebackend/self-service/static/form.html
+++ b/self-serve-go-k8s-helm-tfstatebackend/self-service/static/form.html
@@ -6,7 +6,7 @@
 <body>
 <div>
   <form method="POST" action="/form">     
-      <label>Demo Name</label><input name="name" type="text" value="" />
+      <label>Demo Name: </label><input name="name" type="text" value="" />
       <input type="submit" value="submit" />
   </form>
 </div>
